Feedback from @ossilator: add links to rendered man pages

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -23,6 +23,6 @@
     --md-accent-bg-color--light: rgba(229, 229, 229, 0.7); /* -0.3 */
 }
 
-.md-typeset a:not(div.tabbed-set a) {
+.md-typeset a:not(div.tabbed-labels a) {
     text-decoration: underline;
 }
