Add build hash and edit/view buttons to the footer

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -26,3 +26,13 @@
 .md-typeset a:not(div.tabbed-labels a) {
     text-decoration: underline;
 }
+
+.md-footer__copyright_button {
+    display: inline-block;
+    width: 0.75rem;
+
+    svg {
+        vertical-align: -10%;
+        fill: currentcolor;
+    }
+}
